# soccer_team_generator

./: .env  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
adapters/: pokemon.py  registry.py  star_wars.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_soccer_power_index.py  0003_matches.py
application/use_cases/: generate_team.py  play_match.py
config/: config.py  database.py
domain/: match_engine.py  team_assembler.py
domain/interfaces/: interfaces.py
domain/models/: models.py
persistence/models/: models.py
persistence/repositories/: repositories.py
presentation/: dependencies.py
presentation/api/: router.py
presentation/schemas/: schemas.py
tests/integration/: test_repository.py
tests/unit/: test_adapters.py  test_domain.py  test_use_case.py
