[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "super-soccer-showdown"
version = "0.1.0"
description = "Star Wars vs Pokémon Soccer Team Generator"
authors = []
readme = "README.md"
packages = [
    { include = "domain" },
    { include = "application" },
    { include = "infrastructure" },
    { include = "presentation" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
httpx = ">=0.27.0"
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
alembic = ">=1.13.0"
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
tenacity = ">=8.3.0"
greenlet = ">=3.0.0"
asyncpg = ">=0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.14.0"
aiosqlite = ">=0.20.0"
pytest-cov = ">5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
